# allfollow

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: flake-checks.yaml
nix/: checks.nix  formatter.nix  shell.nix
samples/hyprland/: README.md
samples/hyprland/no-follows/: flake.nix
samples/hyprland/with-follows/: flake.nix
src/: flake_lock.rs  main.rs
src/snapshots/: allfollow__tests__prune_hyprland_flake_lock.snap
tests/snapshots/: allfollow__tests__config_hyprland_flake_lock.snap
