[package]
name = "allfollow"
description = "A CLI tool to deduplicate your Nix flake's inputs as if you added follows everywhere."
repository = "https://github.com/spikespaz/allfollow"
homepage = "https://github.com/spikespaz/allfollow"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["nix", "flake", "lock"]
categories = [
    "command-line-utilities",
    "development-tools",
    "data-structures",
    "algorithms",
]

publish = false

[dependencies]
bpaf = { version = "0.9.20", features = ["derive"] }
indexmap = { version = "2.10.0", features = ["serde"] }
owo-colors = "4.2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"

[profile.release]
lto = true
strip = "debuginfo"
panic = "abort"
